language fix
fixed cloud status getting a scroll bar and panels overflowing. This left aligns the text again, sadly. But it means all languages should work.

--- a/libraryroot.custom.css
+++ b/libraryroot.custom.css
@@ -3352,7 +3352,6 @@ span._2mZ8LlvoUiyeEUtIWuTri {
 }
 
 ._34lrt5-Fc3usZU6trA1P0-, div._1mDAVT4sTzFRwJtlKCw2Ws > div._1kiZKVbDe-9Ikootk57kpA._1aKegVl9_lSdNAyWYZQlr9 > div._3m_zjRTQBqcfzCjXLXUHcR::before {
-    width: 125px;
     text-align: right;
 }
 
@@ -3535,4 +3534,10 @@ button._30Og77vH37EtqaKCCDIAP9 svg {
 
 ._3ydigb6zZAjJ0JCDgHwSYA {
     padding: 0 7px 0 7px !important;
+}
+
+/* language fix */
+
+._2cRYms-zZc4misk9tj3bt8 {
+    overflow: hidden;
 }
